fix: fix z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ a.icon {
   header nav {
     background: rgba(255, 255, 255, 0.85);
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     display: none;
     top: 60px;
@@ -357,7 +357,7 @@ a.icon {
     background: rgba(255, 255, 255, 0.85);
     padding: 15px 15px 8px 15px;
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 2;
     position: fixed;
   }
 
